src/components/FeaturedProjects/FeaturedProjects.css
@font-face {
  font-family: FiraSansLight;
  src: url(../../vendor/fonts/FiraSans-Light.ttf);
}

.featured-project {
  display: flex;
  gap: 16px;
  font-family: FiraSansLight;
}

.featured-project__content {
  text-align: right;
}

.featured-project__header {
  margin: auto;
  color: rgb(114, 229, 225);
}

.featured-project__title {
  font-size: 2em;
}

.featured-project__description {
  display: inline-flex;
  max-width: 50%;
  position: relative;
  font-size: 1em;
  background-color: rgb(35, 29, 55);
  padding: 20px;
  border-radius: 20px;
}

.featured-project__image {
  position: absolute;
  width: 100%;
  max-width: 700px;
  min-height: 500px;
  border-radius: 10px;
}

.featured-project__link {
  margin-right: 1rem;
  columns: white;
}

.featured-project__icon {
  width: 24px;
  height: 24px;
  fill: white;
  transition: transform 0.3s ease, fill 0.3s ease;
}

.featured-project__icon:hover {
  fill: rgb(114, 229, 225);
  transform: scale(1.2);
}

